--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@react-buddy/ide-toolbox": "^2.4.0",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "keycloak-js": "26.1.4",
+    "oidc-client-ts": "^3.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-oidc-context": "^3.2.0",
     "react-router": "^7.0.2",
     "yup": "^1.6.1"
   },
@@ -32,7 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
