--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-keycloak/web": "^3.4.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.12",
-    "axios": "^1.7.9",
+    "@tanstack/react-query": "^5.69.0",
+    "axios": "^1.4.0",
     "formik": "^2.4.6",
-    "keycloak-js": "26.1.4",
+    "keycloak-js": "^24.0.0",
     "oidc-client-ts": "^3.2.0",
+    "oidc-spa": "latest",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.5",
@@ -24,7 +27,9 @@
     "react-dom": "^18.3.1",
     "react-oidc-context": "^3.2.0",
     "react-router": "^7.0.2",
-    "yup": "^1.6.1"
+    "redux": "^4.0.4",
+    "yup": "^1.6.1",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -40,6 +45,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "web-vitals": "^4.2.4"
   }
 }
