--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_KEYCLOAK_URL=https://keycloak.chodan.fun
+VITE_KEYCLOAK_URL=https://keycloak.chodan.fun/realms/mieszkania_realm
 VITE_KEYCLOAK_REALM=mieszkania_realm
 VITE_KEYCLOAK_CLIENT_ID=mieszkanie_client_id
 VITE_BACKEND_URL=http://localhost:8080
