--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+
+/db/example.production.docker-compose.yaml
 /.env
 /frontend/dist
 /frontend/node_modules
