--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:21
 WORKDIR /app
-COPY build/libs/backend-0.1.jar /app
+COPY build/libs/backend.jar /app
 EXPOSE 8080
-CMD ["java","-jar","backend-0.1.jar"]
+CMD ["java","-jar","backend.jar"]
