--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,12 @@
-FROM openjdk:21
+FROM gradle:8.5-jdk21 AS build
 WORKDIR /app
-COPY build/libs/backend.jar /app
+COPY . /app/
+RUN gradle clean jar
+
+FROM openjdk:21-slim
+WORKDIR /app
+#COPY .env.prod /app/.env
+COPY --from=build /app/build/libs/backend.jar /app
 EXPOSE 8080
+#CMD ["/bin/sh", "-c", ". /app/.env && java -jar backend.jar"]
 CMD ["java","-jar","backend.jar"]
