--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,18 @@
+FROM node:20-alpine AS builder
+WORKDIR /app
+
+COPY package.json pnpm-lock.yaml ./
+
+RUN npm install -g pnpm && \
+    pnpm install --frozen-lockfile
+
+COPY . .
+COPY .env.prod .env
+
+RUN pnpm run build
+
 FROM nginx:latest
-COPY  nginx/nginx.conf /etc/nginx/conf.d/default.conf
-COPY ../dist /usr/share/nginx/html
-COPY ../dist /app
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/dist /usr/share/nginx/html
+
 CMD ["nginx", "-g", "daemon off;"]
