--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -2,9 +2,21 @@ server {
     listen 80;
     server_name localhost;
 
-    root /app;
+    root /usr/share/nginx/html;
+    index index.html;
 
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html =404;
     }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public";
+        access_log off;
+    }
+
+    proxy_connect_timeout 600;
+    proxy_send_timeout 600;
+    proxy_read_timeout 600;
+    send_timeout 600;
 }
