--- a/db/docker-compose.yaml
+++ b/db/docker-compose.yaml
@@ -45,6 +45,29 @@ services:
       - keycloak_postgres_db
     command: start-dev
 
+  kafka:
+    image: apache/kafka:3.7.0
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    environment:
+      CLUSTER_ID: "MyCzQHhiRbKHHGi0jHQVZw"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://0.0.0.0:9092,CONTROLLER://kafka:29093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_PROCESS_ROLES: 'broker,controller'
+      KAFKA_NODE_ID: 1
+      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka:29093'
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+    networks:
+      - keycloak_network
+    volumes:
+      - kafka_data:/var/lib/kafka/data
+
+
 networks:
   keycloak_network:
     driver: bridge
@@ -52,4 +75,6 @@ volumes:
   mieszkanie_postgres_data:
     driver: local
   keycloak_postgres_data:
+    driver: local
+  kafka_data:
     driver: local
