anulowanie kontratku i płatności

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,6 @@ HOSTS=localhost:8080,localhost:5173
 KEYCLOAK=http://localhost:8081
 KEYCLOAK_REALM=mieszkanie_realm
 KEYCLOAK_CLIENT_ID=mieszkanie_client_id
+
+EMAIL_USERNAME=example@gmail.com
+EMAIL_PASSWORD='16 dexc number'
