--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "oidc-spa": "latest",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primereact": "^10.8.5",
+    "primelocale": "^2.1.4",
+    "primereact": "^10.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-oidc-context": "^3.2.0",
