--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,4 +2,4 @@ VITE_KEYCLOAK_URL=http://localhost:8081/realms/mieszkanie_realm
 VITE_KEYCLOAK_REALM=mieszkanie_realm
 VITE_KEYCLOAK_CLIENT_ID=mieszkanie_client_id
 VITE_BACKEND_URL=http://localhost:8080
-VITE_FRONTED_URL=http://localhost:5173
+VITE_FRONTEND_URL=http://localhost:5173
