--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.28.0",
-    "vite": "^6.2.3",
+    "vite": "7.1.11",
     "web-vitals": "^4.2.4"
   }
 }
